--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>I am product's catalog</h1>
     <ul class="menu">
         <li><a href="#">Home</a></li>
         <li><a href="#">Products</a></li>
